--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,21 @@
 name: CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.x
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-        pip install pylint
-
-    - name: Lint with pylint
-      run: |
-        pylint main.py
-
-    - name: Build Docker image
-      run: |
-        docker build -t myapp .
-
-    - name: Run tests
-      run: |
-        pytest
+      - name: Run OpenSSF Scorecard
+        uses: ossf/scorecard-action@v1.0.5
