--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'  # تأكد من توافق الإصدار مع Python في بيئتك
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run OpenSSF Scorecard
         uses: ossf/scorecard-action@v1.0.5
+
+      - name: Run tests
+        run: |
+          pytest
