--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run OpenSSF Scorecard
-        uses: ossf/scorecard-action@latest
+        uses: ossf/scorecard-action@v1.0.5
 
       - name: Run tests
         run: |
