--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,39 @@
 name: CI
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.12'
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.x
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+        pip install pylint pytest
 
-      - name: Run OpenSSF Scorecard
-        uses: ossf/scorecard-action@2.4.0
+    - name: Lint with pylint
+      run: |
+        pylint main.py
 
-      - name: Run tests
-        run: |
-          pytest
+    - name: Lint Dockerfile
+      run: |
+        hadolint Dockerfile
+
+    - name: Build Docker image
+      run: |
+        docker build -t myapp .
+
+    - name: Run tests
+      run: |
+        pytest
+
+    - name: Run OpenSSF Scorecard
+      uses: ossf/scorecard-action@v2.4.0
