--- a/.github/workflows/openssf-scorecard.yml
+++ b/.github/workflows/openssf-scorecard.yml
@@ -17,4 +17,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run OpenSSF Scorecard
-        uses: ossf/scorecard-action@2.319.1
+        uses: ossf/scorecard-action@v2.3.0
