--- a/.github/workflows/openssf-scorecard.yml
+++ b/.github/workflows/openssf-scorecard.yml
@@ -17,4 +17,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run OpenSSF Scorecard
-        uses: ossf/scorecard-action@v2.3.0
+        uses: ossf/scorecard-action@v2.4.0
+        with:
+           results-file: ./scorecard-results.json
