--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
         pip install pytest
 
 
-    - name: Run OpenSSF Scorecard
+    - name: Run Scorecard
       uses: ossf/scorecard-action@v2.4.0
       with:
-        entryPoint: ./scorecard
-        results_file: ./scorecard_results.json
-        results_format: json
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
+       results_file: results.sarif
+       results_format: sarif
+       repo_token: ${{ secrets.GITHUB_TOKEN }}
+
