--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,51 @@
-name: CI
+name: CI Pipeline
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.x
+        python-version: '3.9'
 
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest
 
-    - name: Run Scorecard
-      uses: ossf/scorecard-action@v2.4.0
+    - name: Lint code
+      run: |
+        pylint **/*.py
+
+    - name: Lint Dockerfile
+      run: |
+        docker run --rm -i hadolint/hadolint < Dockerfile
+
+    - name: Build Docker image
+      run: |
+        docker build -t myapp:latest .
+
+    - name: Run unit tests
+      run: |
+        pytest
+
+    - name: Setup OpenSSF Scorecard
+      uses: ossf/scorecard-action@v2
       with:
         results_file: results.sarif
-        results_format: sarif
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload results to GitHub
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: results.sarif
