--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,62 +1,26 @@
-name: CI Pipeline
+name: CI
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
-        python-version: '3.9'
+        python-version: 3.x
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest
 
-    - name: Lint code
+    - name: Run Scorecard
       run: |
-        pylint **/*.py
-
-    - name: Lint Dockerfile
-      run: |
-        docker run --rm -i hadolint/hadolint < Dockerfile
-
-    - name: Build Docker image
-      run: |
-        docker build -t myapp:latest .
-
-    - name: Run unit tests
-      run: |
-        pytest
-
-    - name: Run OpenSSF Scorecard
-      uses: ossf/scorecard-action@v2
-      with:
-        results_file: results.json
-        results_format: json  # تحقق من التنسيق الصحيح
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Check if results file exists and is not empty
-      run: |
-        if [ -s results.json ]; then
-          echo "Results file exists and is not empty."
-        else
-          echo "Results file does not exist or is empty."
-          exit 1
-        fi
-
-    - name: Upload results to GitHub
-      uses: github/codeql-action/upload-sarif@v1
-      with:
-        sarif_file: results.json
+        mkdir -p ./results
+        scorecard --results-path ./results/results.json
